test for all bwm file

--- a/file_definitions/deftests_config.json
+++ b/file_definitions/deftests_config.json
@@ -1,3 +1,4 @@
 {
-    "gamePath" : "G:\\Lionhead Studios\\Black & White 2"
+    "gamePath" : "G:\\Lionhead Studios\\Black & White 2",
+    "bwmsPath" : "Data\\Art\\**\\**.bwm"
 }
