--- a/file_definitions/deftests_config.json
+++ b/file_definitions/deftests_config.json
@@ -1,4 +1,5 @@
 {
     "gamePath" : "G:\\Lionhead Studios\\Black & White 2",
-    "bwmsPath" : "Data\\Art\\**\\**.bwm"
+    "bwmsPath" : "Data\\Art\\**\\**.bwm",
+    "alsPath" : "Data\\Art\\**\\**.al"
 }
